external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_or_binding_struct.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03010]: unbound field
  ┌─ tests/move_2024/matching/invalid_or_binding_struct.move:6:23
  │
6 │             S { x } | S { bogus: x } => x,
  │                       ^^^^^^^^^^^^^^ Unbound field 'bogus' in '0x42::m::S'

error[E04016]: too few arguments
  ┌─ tests/move_2024/matching/invalid_or_binding_struct.move:6:23
  │
6 │             S { x } | S { bogus: x } => x,
  │                       ^^^^^^^^^^^^^^ Missing pattern for field 'x' in '0x42::m::S'
